# firefox_newuser

./: .gitignore  MANIFEST.in  NEW_RELEASE.md  README.md  firefox_newuser  firefox_newuser.epj  pyproject.toml  setup.py
firefox_newuser/: __init__.py  commons.py  core.py  poethepoet.py
firefox_newuser/locale/: es.po  firefox_newuser.pot
firefox_newuser/locale/es/LC_MESSAGES/: firefox_newuser.mo
locale/: es.po  firefox_newuser.pot
