[tool.poetry]
name = "firefox-newuser"
version = "0.9.0"
description = "Script to execute a firefox instance with a recently created user. It deletes user after firefox execution"
authors = ["turulomio <turulomio@yahoo.es>"]
license = "GPL-3.0 license"
readme = "README.md"
packages = [{include = "firefox_newuser"}]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
tqdm = ">=4.66.4"
psutil = ">=5.9.8"
colorama = ">=0.4.6"

[tool.poetry.group.dev.dependencies]
poetry = ">=1.8.3"
poethepoet = ">=0.26.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
firefox_newuser = "firefox_newuser.core:main"
firefox_newuser_wayland = "firefox_newuser.core:wayland"


[tool.poe.tasks]
release = { script = "firefox_newuser.poethepoet:release" }
translate = { script = "firefox_newuser.poethepoet:translate" }

[project.urls]
homepage = "https://github.com/turulomio/firefox_newuser/"
repository = "https://github.com/turulomio/firefox_newuser/"
changelog = "https://github.com/turulomio/firefox_newuser#changelog"
