[project]
name = "firefox-newuser"
version = "1.0.0"
description = "Script to execute a firefox instance with a recently created user. It deletes user after firefox execution"
authors = [{name = "turulomio", email = "turulomio@yahoo.es"}]
license = "GPL-3.0-only"
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "tqdm>=4.67.3",
    "psutil>=7.2.2",
    "colorama>=0.4.6",
]

[project.scripts]
firefox_newuser = "firefox_newuser.core:main"

[project.urls]
homepage = "https://github.com/turulomio/firefox_newuser/"
repository = "https://github.com/turulomio/firefox_newuser/"
changelog = "https://github.com/turulomio/firefox_newuser#changelog"

[tool.poetry]
packages = [{include = "firefox_newuser"}]

[tool.poetry.group.dev.dependencies]
poetry = ">=2.3.2"
poethepoet = ">=0.41.0"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
release = { script = "firefox_newuser.poethepoet:release" }
translate = { script = "firefox_newuser.poethepoet:translate" }
